installed doctrine and maker bundle

--- a/docker/nginx/conf.d/default.conf
+++ b/docker/nginx/conf.d/default.conf
@@ -1,6 +1,6 @@
 server {
     server_name 127.0.0.1 localhost;
-    root /srv/app/public;
+    root /srv/public;
 
     location / {
         # try to serve file directly, fallback to index.php
