--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,10 @@
     "php": ">=8.1",
     "ext-ctype": "*",
     "ext-iconv": "*",
+    "doctrine/dbal": "^3",
+    "doctrine/doctrine-bundle": "^2.11",
+    "doctrine/doctrine-migrations-bundle": "^3.3",
+    "doctrine/orm": "^3.0",
     "symfony/console": "6.4.*",
     "symfony/dotenv": "6.4.*",
     "symfony/flex": "^2",
@@ -15,7 +19,8 @@
     "symfony/yaml": "6.4.*"
   },
   "require-dev": {
-    "friendsofphp/php-cs-fixer": "v3.46.0"
+    "friendsofphp/php-cs-fixer": "v3.46.0",
+    "symfony/maker-bundle": "^1.54"
   },
   "config": {
     "allow-plugins": {
@@ -62,7 +67,8 @@
   "extra": {
     "symfony": {
       "allow-contrib": false,
-      "require": "6.4.*"
+      "require": "6.4.*",
+      "docker": true
     }
   }
 }
