--- a/.env
+++ b/.env
@@ -26,7 +26,9 @@ APP_SECRET=86c23e288c44327a0371e55704eddb8e
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
-DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
+
+DATABASE_URL="postgresql://app:123@db:5432/app?serverVersion=15&charset=utf8"
+
 ###< doctrine/doctrine-bundle ###
 
 ###> nelmio/cors-bundle ###
