--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
     "doctrine/doctrine-migrations-bundle": "^3.3",
     "doctrine/orm": "^3.0",
     "nelmio/cors-bundle": "^2.4",
+    "odolbeau/phone-number-bundle": "^3.10",
     "phpdocumentor/reflection-docblock": "^5.3",
     "phpstan/phpdoc-parser": "^1.25",
     "symfony/asset": "6.4.*",
