--- a/config/packages/api_platform.yaml
+++ b/config/packages/api_platform.yaml
@@ -1,8 +1,8 @@
 api_platform:
-    title: Hello API Platform
+    title: API для CRUD операций над пользователем
     version: 1.0.0
     formats:
-        jsonld: ['application/ld+json']
+        json: ['application/json']
     docs_formats:
         jsonld: ['application/ld+json']
         jsonopenapi: ['application/vnd.openapi+json']
