--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,15 @@
     "doctrine/doctrine-bundle": "^2.11",
     "doctrine/doctrine-migrations-bundle": "^3.3",
     "doctrine/orm": "^3.0",
+    "nelmio/api-doc-bundle": "^4.20",
+    "odolbeau/phone-number-bundle": "^3.10",
     "symfony/console": "6.4.*",
     "symfony/dotenv": "6.4.*",
     "symfony/flex": "^2",
     "symfony/framework-bundle": "6.4.*",
     "symfony/runtime": "6.4.*",
+    "symfony/serializer": "6.4.*",
+    "symfony/validator": "6.4.*",
     "symfony/yaml": "6.4.*"
   },
   "require-dev": {
@@ -66,7 +70,7 @@
   },
   "extra": {
     "symfony": {
-      "allow-contrib": false,
+      "allow-contrib": true,
       "require": "6.4.*",
       "docker": true
     }
