--- a/composer.json
+++ b/composer.json
@@ -13,10 +13,14 @@
     "doctrine/orm": "^3.0",
     "nelmio/api-doc-bundle": "^4.20",
     "odolbeau/phone-number-bundle": "^3.10",
+    "phpdocumentor/reflection-docblock": "^5.3",
+    "phpstan/phpdoc-parser": "^1.25",
     "symfony/console": "6.4.*",
     "symfony/dotenv": "6.4.*",
     "symfony/flex": "^2",
     "symfony/framework-bundle": "6.4.*",
+    "symfony/property-access": "6.4.*",
+    "symfony/property-info": "6.4.*",
     "symfony/runtime": "6.4.*",
     "symfony/serializer": "6.4.*",
     "symfony/validator": "6.4.*",
